--- a/Atividade_4_X_pelo_minimax_O_pelo_jogador.ipynb
+++ b/Atividade_4_X_pelo_minimax_O_pelo_jogador.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyP2VpmtRnrdVT6jnN/I9yXT",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,14 +12,14 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "LBra0PoiEHKI"
+      },
       "source": [
         "Nosso codigo é um jogo da velha utilizando minimax, com uma alteração que consiste em um jogador X ou O aleatorios possuirem direito a 2 jogadas seguidas de acordo com o numero(1 ou 2) sorteado\n",
         "\n",
         "Gabriel Davi, Giordani Andre\n"
-      ],
-      "metadata": {
-        "id": "LBra0PoiEHKI"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -50,6 +34,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "QUZtaV07C14a"
+      },
+      "outputs": [],
       "source": [
         "def jogador(tabuleiro, rodada):\n",
         "\n",
@@ -60,30 +49,30 @@
         "      return 'O'\n",
         "\n",
         "# Se a rodada for par, o jogador atual será 'X', caso for impar o jogador atual será 'O'"
-      ],
-      "metadata": {
-        "id": "QUZtaV07C14a"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3fSg1qClC9ml"
+      },
+      "outputs": [],
       "source": [
         "def acoes(tabuleiro):\n",
         "\n",
         "    return [(i, j) for i in range(3) for j in range(3) if tabuleiro[i][j] == ' ']\n",
         "\n",
         "# retorna as coordenadas das células vazias no tabuleiro de jogo da velha"
-      ],
-      "metadata": {
-        "id": "3fSg1qClC9ml"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "vkk9lCoCEyqR"
+      },
+      "outputs": [],
       "source": [
         "def resultado(tabuleiro, acao, rodada):\n",
         "\n",
@@ -93,15 +82,15 @@
         "    novo_tabuleiro[acao[0]][acao[1]] = jogador_atual\n",
         "    return novo_tabuleiro\n",
         "    # cria uma copia do tabuleiro alem de retornar o tabuleiro novo com X ou O posicionado"
-      ],
-      "metadata": {
-        "id": "vkk9lCoCEyqR"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "GqAnXIATFpSr"
+      },
+      "outputs": [],
       "source": [
         "def ganhador(tabuleiro):\n",
         "\n",
@@ -125,15 +114,15 @@
         "\n",
         "\n",
         "    return None #retorna none se nao tiver tido ganhado (nenhuma das condicoes foram concluidas)"
-      ],
-      "metadata": {
-        "id": "GqAnXIATFpSr"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "RTwYm9toGjk6"
+      },
+      "outputs": [],
       "source": [
         "def final(tabuleiro):\n",
         "    vencedor = ganhador(tabuleiro)\n",
@@ -149,15 +138,15 @@
         "            return True\n",
         "        else:\n",
         "            return False"
-      ],
-      "metadata": {
-        "id": "RTwYm9toGjk6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Kyn-Wlk0HnDI"
+      },
+      "outputs": [],
       "source": [
         "def custo(tabuleiro):\n",
         "    vencedor = ganhador(tabuleiro) #chama a funcao para saber se tem algum vencedor\n",
@@ -173,15 +162,15 @@
         "        return 0\n",
         "\n",
         "#retorna 1 se X for vencedor, -1 se O for vencedor ou 0 se nao tiver vencedor"
-      ],
-      "metadata": {
-        "id": "Kyn-Wlk0HnDI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "EIfTd_LTIIX8"
+      },
+      "outputs": [],
       "source": [
         "def imprimir_tabuleiro(tabuleiro):\n",
         "\n",
@@ -195,15 +184,15 @@
         "        print()\n",
         "        if i < 2:\n",
         "            print(\"-----\")"
-      ],
-      "metadata": {
-        "id": "EIfTd_LTIIX8"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dMib_utJQghz"
+      },
+      "outputs": [],
       "source": [
         "def minimax(tabuleiro, rodada):\n",
         "    jogador_atual = jogador(tabuleiro, rodada)\n",
@@ -214,15 +203,15 @@
         "        _, acao = minValor(tabuleiro, rodada)\n",
         "\n",
         "    return acao"
-      ],
-      "metadata": {
-        "id": "dMib_utJQghz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CCTVG-CxIWK6"
+      },
+      "outputs": [],
       "source": [
         "def maxValor(tabuleiro, rodada):\n",
         "    if final(tabuleiro):\n",
@@ -257,20 +246,31 @@
         "            melhor_acao = acao\n",
         "\n",
         "    return min_utilidade, melhor_acao"
-      ],
-      "metadata": {
-        "id": "CCTVG-CxIWK6"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "background_save": true
+        },
+        "id": "z8LEqZ6LJGnO"
+      },
+      "outputs": [],
       "source": [
         "def jogar_jogo():\n",
         "    # Inicia um novo jogo\n",
         "    tabuleiro = [[' ' for _ in range(3)] for _ in range(3)]\n",
-        "    rodada = 0\n",
+        "\n",
+        "    rodada = random.randint(-1, 0)\n",
+        "\n",
+        "    # randomizando numero de -1 e 0, decidindo quem iniciara a jogada(X=0,O=-1)\n",
+        "    if rodada == -1:\n",
+        "      print(\"O vai começar jogando\\n\")\n",
+        "    elif rodada== 0:\n",
+        "       print(\"X vai começar jogando\\n\")\n",
+        "\n",
         "\n",
         "    # Randomizador de 1,2 ou 3\n",
         "    randomizador = random.randint(1, 3)\n",
@@ -330,12 +330,23 @@
         "print(f\"\\nJogador X ganhou {resultados['X']} jogos.\")\n",
         "print(f\"Jogador O ganhou {resultados['O']} jogos.\")\n",
         "print(f\"Houve {resultados['Empate']} empates.\")"
-      ],
-      "metadata": {
-        "id": "z8LEqZ6LJGnO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyNMg/N7qv6pQ4+HKZMDSOs+",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
